--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+<--     ongoing
+<--x    pernah gagal diterapkan
+
 Instal Webpack & Plugins
 Webpack bundling enables dev-start
 Implement fetch RESTful API
@@ -20,8 +23,9 @@ Implement fetch RESTful API
 Add Spinner Animation when Reloading
 Improve responsive mode on Redmi Note 4 <--
 Background
+    Background color
     Background Image
-    Background change using local storage <--
-        Background color <--
+            Background change using local storage <--
 Dark Mode <--
-web components
+Make header sticky <--
+Fade in action button <--
